--- a/java/.project
+++ b/java/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FBCrawler</name>
+	<name>SocialSnapshoter</name>
 	<comment></comment>
 	<projects>
 	</projects>
