Updated client, address.yahoo.com workaround

--- a/java/socialsnapshot.config.example
+++ b/java/socialsnapshot.config.example
@@ -1,3 +1,5 @@
 #Example configuration for SocialSnapshot client
 appid=0000000000000000
 graphHost=http://httpserver.example.net/SocialSnapshot/php/
+yahooUser=id@yahoo.com
+yahooPassword=xxxxxxxxxxxxxxxxxxx
